--- a/HMGreenCityMLM/Views/Shared/_Layout.cshtml
+++ b/HMGreenCityMLM/Views/Shared/_Layout.cshtml
@@ -105,6 +105,12 @@
                             <li class="dropdown">
                                 <a href="/User/AssociateDashBoard" class="nav-link"><i class="fas fa-desktop"></i><span>Dashboard</span></a>
                             </li>
+                            @*@if (Session["FK_RankId"].ToString() == "1")
+                            {
+                                <li class="dropdown">
+                                    <a href="/User/DownlineRegistration" class="nav-link"><i class="fa fa-registered"></i><span>Downline Registration</span></a>
+                                </li>
+                            }*@
                             <li class="dropdown">
                                 <a href="/User/TopupList" class="nav-link"><i class="fas fa-list"></i><span>Top Up List</span></a>
                             </li>
