--- a/HMGreenCityMLM/Views/Admin/AdminDashBoard.cshtml
+++ b/HMGreenCityMLM/Views/Admin/AdminDashBoard.cshtml
@@ -24,6 +24,18 @@
     background: linear-gradient(to right, #2e1437, #2e1437, #2e1437) !important;
     color: #fff;
 }  
+
+ .card .card-icon-large svg{
+    width: 57px;
+    background: #fff;
+    padding: 5px;
+    border-radius: 5px;
+    opacity:1;
+}
+   .card .card-icon.card-icon-large {
+        opacity:1;
+        top:11px;
+    }
 </style>
 
 
@@ -41,83 +53,99 @@
 
                 @*===============================================================================*@
 
-                <div class="row ">
-                    <div class="col-xl-3 col-lg-6">
-                        <div class="card tab1">
-                            <div class="card-statistic-3">
-                                <div class="card-icon card-icon-large"><i class=""></i></div>
-                                <div class="card-content">
-                                    <h4 class="card-title">@ViewBag.TotalUsers</h4>
-                                    <a class="mb-0" style="color:#000000" href="/AdminProfile/AssociateList"><span class="text-white">Total Associates</span></a>
+                     <div class="row ">
+                        <div class="col-xl-6 col-lg-6">
+                            <div class="row">
+                                <div class="col-xl-12 col-lg-12">
+                                    <div class="card tab1">
+                                        <div class="card-statistic-3">
+                                            <div class="card-icon card-icon-large">
+                                                <img src="/assetsAdmin/img/1.svg" />
+                                            </div>
+                                            <div class="card-content">
+                                                <h4 class="card-title">@ViewBag.TotalUsers</h4>
+                                                <a class="mb-0" style="color:#000000" href="/AdminProfile/AssociateList"><span class="text-white">Total Associates</span></a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-xl-12 col-lg-12">
+                                    <div class="card tab2">
+                                        <div class="card-statistic-3">
+                                            <div class="card-icon card-icon-large">
+                                                <img src="/assetsAdmin/img/2.svg" />
+                                            </div>
+                                            <div class="card-content">
+                                                <h4 class="card-title">@ViewBag.ActiveUsers</h4>
+                                                <a class="mb-0" style="color:#000000" href="/AdminProfile/AssociateList?Status=P"><span class="text-white">Active Users</span></a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-xl-12 col-lg-12">
+                                    <div class="card tab3">
+                                        <div class="card-statistic-3">
+                                            <div class="card-icon card-icon-large">
+                                                <img src="/assetsAdmin/img/3.svg" />
+                                            </div>
+                                            <div class="card-content">
+                                                <h4 class="card-title">@ViewBag.InactiveUsers</h4>
+                                                <a class="mb-0" style="color:#000000" href="/AdminProfile/AssociateList?Status=T"><span class="text-white">InActive Users</span></a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-xl-12 col-lg-12">
+                                    <div class="card tab4">
+                                        <div class="card-statistic-3">
+                                            <div class="card-icon card-icon-large">
+                                                <img src="/assetsAdmin/img/4.svg" />
+                                            </div>
+                                            <div class="card-content">
+                                                <h4 class="card-title">@ViewBag.BlockedUsers</h4>
+                                                <a class="mb-0" style="color:#000000" href="/AdminProfile/AssociateList?Status=B"><span class="text-white">Blocked Users</span></a>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="col-xl-3 col-lg-6">
-                        <div class="card tab2">
-                            <div class="card-statistic-3">
-                                <div class="card-icon card-icon-large"><i class=""></i></div>
-                                <div class="card-content">
-                                    <h4 class="card-title">@ViewBag.ActiveUsers</h4>
-                                    <a class="mb-0" style="color:#000000" href="/AdminProfile/AssociateList?Status=P"><span class="text-white">Active Users</span></a>
+                        <div class="col-xl-6 col-lg-6">
+                            <div class="row">
+                                <div class="col-lg-12">
+                                    <div class="card panel-default">
+                                       
+                                        <!-- /.panel-heading -->
+                                        <div class="card-body">
+                                            <div class="text-dark">
+                                                Associate Details
+                                            </div>
+                                            <div id="divusers"></div>
+                                        </div>
+                                        <!-- /.panel-body -->
+                                    </div>
+                                    <!-- /.panel -->
+                                    <!-- /.panel -->
                                 </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-xl-3 col-lg-6">
-                        <div class="card tab3">
-                            <div class="card-statistic-3">
-                                <div class="card-icon card-icon-large"><i class=""></i></div>
-                                <div class="card-content">
-                                    <h4 class="card-title">@ViewBag.InactiveUsers</h4>
-                                    <a class="mb-0" style="color:#000000" href="/AdminProfile/AssociateList?Status=T"><span class="text-white">InActive Users</span></a>
+
+                                <div class="col-lg-12">
+                                    <div class="card panel-default">
+                                        <!-- /.panel-heading -->
+                                        <div class="card-body">
+                                            <div class="text-dark">
+                                                Payout Status
+                                            </div>
+                                            <div id="divpayout"></div>
+                                        </div>
+                                        <!-- /.panel-body -->
+                                    </div>
+                                    <!-- /.panel -->
+                                    <!-- /.panel -->
                                 </div>
+                               </div>
                             </div>
-                        </div>
                     </div>
-                    <div class="col-xl-3 col-lg-6">
-                        <div class="card tab4">
-                            <div class="card-statistic-3">
-                                <div class="card-icon card-icon-large"><i class=""></i></div>
-                                <div class="card-content">
-                                    <h4 class="card-title">@ViewBag.BlockedUsers</h4>
-                                    <a class="mb-0" style="color:#000000" href="/AdminProfile/AssociateList?Status=B"><span class="text-white">Blocked Users</span></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
                 <div class="row">
-                    <div class="col-lg-3">
-                        <div class="card panel-default">
-                            <div class="card-header h5 text-dark">
-                                Associate Details
-                            </div>
-                            <!-- /.panel-heading -->
-                            <div class="card-body">
-                                <div id="divusers"></div>
-                            </div>
-                            <!-- /.panel-body -->
-                        </div>
-                        <!-- /.panel -->
-                        <!-- /.panel -->
-                    </div>
-
-                    <div class="col-lg-3">
-                        <div class="card panel-default">
-                            <div class="card-header h5 text-dark">
-                                Payout Status
-                            </div>
-                            <!-- /.panel-heading -->
-                            <div class="card-body">
-                                <div id="divpayout"></div>
-                            </div>
-                            <!-- /.panel-body -->
-                        </div>
-                        <!-- /.panel -->
-                        <!-- /.panel -->
-                    </div>
-
                     <div class="col-lg-6">
                         <div class="card panel-default">
                             <div class="card-header h5 text-dark">
@@ -129,11 +157,7 @@
                             </div>
                             <!-- /.panel-body -->
                         </div>
-                        <!-- /.panel -->
-                        <!-- /.panel -->
                     </div>
-                </div>
-                <div class="row">
                     <div class="col-lg-6">
                         <div class="card panel-default">
                             <div class="card-header h5 text-dark">
