--- a/HMGreenCityMLM/Views/Shared/_AdminLayout.cshtml
+++ b/HMGreenCityMLM/Views/Shared/_AdminLayout.cshtml
@@ -26,7 +26,7 @@
             padding: 0 20px;
             width: 100%;
             letter-spacing: 0.3px;
-            color: #000000 !important;
+            color: #fff !important;
             font-weight: 600;
             text-decoration: none;
         }
@@ -98,7 +98,7 @@
                         </div>
                         <div class="sidebar-user-details">
                             <div class="user-name">HM GREEN CITY</div>
-                            <div class="user-role">Admin</div>
+                            <div class="user-role"><a href="#!" class="text-white">Admin</a></div>
                         </div>
                     </div>
                     @{
