--- a/HMGreenCityMLM/Views/User/BinaryTree.cshtml
+++ b/HMGreenCityMLM/Views/User/BinaryTree.cshtml
@@ -610,6 +610,9 @@
                                 </div>
                                 <div class="col-md-12 col-lg-10">
                                     <div class="row justify-content-lg-end" id="awardRow">
+
+                                        <a href="/User/DownlineRankAchieverReports" class="btn btn-info text-white">Check Your Downline Rank Achiever</a>
+
                                         <div class="col-md-2 col-lg-2">
                                             <div class="award_img">
                                                 <img src="~/images/TreeIcon/HMKAward.png" alt="image" />
