--- a/HMGreenCityMLM/Views/User/DownlineRankAchieverAssociateReports.cshtml
+++ b/HMGreenCityMLM/Views/User/DownlineRankAchieverAssociateReports.cshtml
@@ -17,7 +17,7 @@
                     <div class="card-body">
                         <div class="d-flex align-items-center justify-content-between">
                             <h6 class="mb-0">Downline Rank Achiever Associate Reports</h6>
-                            <button class="btn btn-info"><a href="/User/DownlineRankAchieverReports" class="text-white">Back</a></button>
+                            <a  href="/User/DownlineRankAchieverReports" class="btn btn-info text-white">Back</a>
                         </div>
                         <p style="color: red;display: block; margin-bottom:0px; text-align:center">
                         </p>
