--- a/HMGreenCityMLM/Views/Shared/_Layout.cshtml
+++ b/HMGreenCityMLM/Views/Shared/_Layout.cshtml
@@ -157,7 +157,7 @@
                                     <i class="fas fa-list"></i><span>Reports</span>
                                 </a>
                                 <ul class="dropdown-menu">
-                                    <li><a class="nav-link" href="/User/DownlineRankAchieverReports">Downline Rank Achiever Reports</a></li>
+                                    <li><a class="nav-link" href="/User/DownlineRankAchieverReports">Downline Rank Achiever Report</a></li>
                                 </ul>
                             </li>
                         </ul>
