--- a/HMGreenCityMLM/assetsAdmin/css/style.css
+++ b/HMGreenCityMLM/assetsAdmin/css/style.css
@@ -7058,16 +7058,16 @@ body.layout-3 .main-footer {
 }
 
 .main-sidebar .sidebar-menu li a {
-	position: relative;
-	display: flex;
-	align-items: center;
-	height: 50px;
-	padding: 0 20px;
-	width: 100%;
-	letter-spacing: 0.3px;
-	color: #60686f;
-	font-weight: 600;
-	text-decoration: none
+	 position: relative;
+    display: flex;
+    align-items: center;
+    height: 50px;
+    padding: 0 20px;
+    width: 100%;
+    letter-spacing: 0.3px;
+    color: #fff!important;
+    font-weight: 600;
+    text-decoration: none;
 }
 
 .main-sidebar .sidebar-menu li a .badge {
@@ -7126,14 +7126,14 @@ body.layout-3 .main-footer {
 	float: none;
 	width: 100%;
 	box-shadow: none;
-	background-color: transparent
+	background-color: fff;
 }
 
 .main-sidebar .sidebar-menu li ul.dropdown-menu li a {
-	color: #60686f;
-	height: 35px;
-	padding-left: 50px;
-	font-weight: 400
+	  color: #000000 !important;
+        height: 35px;
+        padding-left: 50px;
+        font-weight: 700;
 }
 
 .main-sidebar .sidebar-menu li ul.dropdown-menu li a:hover {
