--- a/HMGreenCityMLM/Views/Admin/AdminDashBoard.cshtml
+++ b/HMGreenCityMLM/Views/Admin/AdminDashBoard.cshtml
@@ -52,7 +52,7 @@
                                 <div class="card-icon card-icon-large"><i class=""></i></div>
                                 <div class="card-content">
                                     <h4 class="card-title">@ViewBag.TotalUsers</h4>
-                                    <a class="mb-0" style="color:#000000" href="/AdminProfile/AssociateList"><span class="text-white">Total Associates</span></a>
+                                    <a class="mb-0" style="color:#000000" href="/AdminProfile/AssociateList"><span class="text-white">Total Business Partner</span></a>
                                 </div>
                             </div>
                         </div>
@@ -107,7 +107,7 @@
                     <div class="col-lg-3">
                         <div class="card panel-default">
                             <div class="card-header h5 text-dark">
-                                Associate Details
+                                Business Partner Details
                             </div>
                             <!-- /.panel-heading -->
                             <div class="card-body">
