--- a/HMGreenCityMLM/Views/Shared/_Layout.cshtml
+++ b/HMGreenCityMLM/Views/Shared/_Layout.cshtml
@@ -73,10 +73,10 @@
                 <aside id="sidebar-wrapper">
                     <div class="sidebar-user">
                         <div class="sidebar-user-picture">
-                            <img alt="image" src="~/assetsAdmin/img/user.png">
+                            <img alt="image" src="~/assetsAdmin/img/loginLogo.png">
                         </div>
                         <div class="sidebar-user-details">
-                            <div class="user-name">HM GREEN CITY</div>
+                            <div class="user-name">HM GROUP OF COMPANY</div>
                             @*<div class="user-role">Administrator</div>*@
                         </div>
                     </div>
