--- a/HMGreenCityMLM/Views/User/PrintTopup.cshtml
+++ b/HMGreenCityMLM/Views/User/PrintTopup.cshtml
@@ -167,11 +167,11 @@
                     <ul>
                         <li>All disputes will be subject to Lucknow jurisdiction</li>
                         <li>Listed above have been received in order and in saleable condition.</li>
-                        <li>Payment must be made by Cash/ Demand Draft only in favour of HM Green City</li>
+                        <li>Payment must be made by Cash/ Demand Draft only in favour of HM GROUP OF COMPANY</li>
                     </ul>
                 </td>
                 <td colspan="5">
-                    <b>HM Green City</b>
+                    <b>HM GROUP OF COMPANY</b>
                     <br />
                     Authorised Signatory
                 </td>
