--- a/HMGreenCityMLM/Views/AdminReports/PrintTopUp.cshtml
+++ b/HMGreenCityMLM/Views/AdminReports/PrintTopUp.cshtml
@@ -51,8 +51,8 @@
                     <h3>@ViewBag.CompanyAddress</h3>
                     <h3>Phone : @ViewBag.LandLine</h3>
                 </td>
-                <td colspan="3" style="text-align:right; padding-right:20px">
-                    <img src="../images/hmlogo.png" height="150" width="150" />
+                <td colspan="3" style="text-align:center;">
+                    <img src="~/images/logonew.png" height="120" width="120" />
                 </td>
             </tr>
             <tr>
