--- a/HMGreenCityMLM/Views/Home/Login.cshtml
+++ b/HMGreenCityMLM/Views/Home/Login.cshtml
@@ -62,7 +62,7 @@
                         <div>
                             <div class="card-header text-center d-block">
                                 @*<h3 class="mb-0">Login</h3>*@
-                                <img style="height:63px; margin:auto;" src="/assetsAdmin/img/loginLogo.png" alt="logo" />
+                                <img style="height:120px; margin:auto;" src="~/images/logonew.png" alt="logo" />
                             </div>
                             <div class="card-body">
                                 <h6 class="mb-4 text-center text-dark">
