--- a/HMGreenCityMLM/Views/Home/Login.cshtml
+++ b/HMGreenCityMLM/Views/Home/Login.cshtml
@@ -38,7 +38,7 @@
                background:url(../../assetsAdmin/img/loginLeftImg.jpg) no-repeat;
                background-size:cover;
                 background-size: 50% 100%;
-                padding:100px 0px!important;
+                padding:60px 0px!important;
             }
 
         }
@@ -49,7 +49,7 @@
     <div class="loader"></div>
     <div id="app">
         <section class="section" id="LoginBg">
-            <div class="container mt-5">
+            <div class="container">
                 <div class="row bg-white loginLeftImg"  style="box-shadow:0 0 20px #000000; border-radius:30px 0px 30px 0px">
                     <div class="col-12 col-md-6 col-lg-6 align-self-center text-center">
                         <h3 class="mb-0 text-white">Welcome To Our Website</h3>
