--- a/HMGreenCityMLM/Views/KYCDocuments/KYCDocuments.cshtml
+++ b/HMGreenCityMLM/Views/KYCDocuments/KYCDocuments.cshtml
@@ -34,43 +34,51 @@
                 <div class="card">
                     <div class="card-body">
                         <div class="form-row">
-                            <div class="form-group col-md-4">
-                                <label>Adhar Number <span style="color:red">*</span></label>
-                                @Html.TextBoxFor(m => m.AdharNumber, new { @class = "form-control", @required = "required" })
-                                @Html.DisplayFor(m => m.AdharStatus, new { @class = "form-control" })
-                                @Html.ValidationMessageFor(m => m.AdharNumber)
+                            <div class="form-group col-md-6 mb-3">
+                               <div class="row">
+                                   <div class="col-lg-12 col-md-12 mb-3">
+                                       <label>Adhar Number <span style="color:red">*</span></label>
+                                       @Html.TextBoxFor(m => m.AdharNumber, new { @class = "form-control", @required = "required" })
+                                       @Html.DisplayFor(m => m.AdharStatus, new { @class = "form-control" })
+                                       @Html.ValidationMessageFor(m => m.AdharNumber)
+                                   </div>
+                                   <div class="form-group col-md-6">
+                                       <label>Adhar Front Image <span style="color:red">*</span></label>
+                                       <input type="file" name="postedFile" required="required" />
+                                       <br />
+                                       <img src="@Url.Content(Model.AdharImage)" height="120" width="180" />
+                                   </div>
+                                   <div class="form-group col-md-6">
+                                       <label>Adhar Backside Image <span style="color:red">*</span></label>
+                                       <input type="file" name="postedFile" required="required" />
+                                       <br />
+                                       <img src="@Url.Content(Model.AdharBacksideImage)" height="120" width="180" />
+                                   </div>
+                               </div>
                             </div>
-                            <div class="form-group col-md-4">
-                                <label>Pan Number <span style="color:red">*</span></label>
-                                @Html.TextBoxFor(m => m.PanNumber, new { @class = "form-control", @required = "required" })
-                                @Html.DisplayFor(m => m.PanStatus, new { @class = "form-control" })
-                                @Html.ValidationMessageFor(m => m.PanNumber)
-                                @*<input type ="text" id="txtLastName" value="@item1.LastName" disabled="disabled" class="form-control" />*@
-                            </div>
-                            <div class="form-group col-md-4">
-                                <label>Document Number <span style="color:red">*</span></label>
-                                @Html.TextBoxFor(m => m.DocumentNumber, new { @class = "form-control", @required = "required" })
-                                @Html.DisplayFor(m => m.DocumentStatus, new { @class = "form-control" })
-                                @Html.ValidationMessageFor(m => m.DocumentNumber)
-                                @*<input type ="text" id="txtMobile"  value="@item1.Mobile" disabled="disabled" class="form-control" />*@
-                            </div>
-                            <div class="form-group col-md-4">
-                                <label>Adhar Image <span style="color:red">*</span></label>
-                                <input type="file" name="postedFile" required="required" />
-                                <br />
-                                <img src="@Url.Content(Model.AdharImage)" height="120" width="180" />
-                            </div>
-                            <div class="form-group col-md-4">
-                                <label>Pan Image <span style="color:red">*</span></label>
-                                <input type="file" name="postedFile" required="required" />
-                                <br />
-                                <img src="@Url.Content(Model.PanImage)" height="120" width="180" />
-                            </div>
-                            <div class="form-group col-md-4">
-                                <label>Document Image <span style="color:red">*</span></label>
-                                <input type="file" name="postedFile" required="required" />
-                                <br />
-                                <img src="@Url.Content(Model.DocumentImage)" height="120" width="180" />
+                            <div class="form-group col-md-6">
+                                <div class="row">
+                                    <div class="form-group col-md-6 col-lg-6">
+                                        <label>Pan Number <span style="color:red">*</span></label>
+                                        @Html.TextBoxFor(m => m.PanNumber, new { @class = "form-control", @required = "required" })
+                                        @Html.DisplayFor(m => m.PanStatus, new { @class = "form-control" })
+                                        @Html.ValidationMessageFor(m => m.PanNumber)
+                                        @*<input type ="text" id="txtLastName" value="@item1.LastName" disabled="disabled" class="form-control" />*@
+                                        <label class="d-block mt-3 text-dark">Pan Image <span style="color:red">*</span></label>
+                                        <input type="file" name="postedFile" required="required" />
+                                        <img src="@Url.Content(Model.PanImage)" height="120" width="180" />
+                                    </div>
+                                    <div class="form-group col-md-6 col-lg-6">
+                                        <label>Document Number <span style="color:red">*</span></label>
+                                        @Html.TextBoxFor(m => m.DocumentNumber, new { @class = "form-control", @required = "required" })
+                                        @Html.DisplayFor(m => m.DocumentStatus, new { @class = "form-control" })
+                                        @Html.ValidationMessageFor(m => m.DocumentNumber)
+                                        @*<input type ="text" id="txtMobile"  value="@item1.Mobile" disabled="disabled" class="form-control" />*@
+                                        <label class="d-block mt-3 text-dark" >Document Image <span style="color:red">*</span></label>
+                                        <input type="file" name="postedFile" required="required" />
+                                        <img src="@Url.Content(Model.DocumentImage)" height="120" width="180" />
+                                    </div>
+                                </div>
                             </div>
                             <div class="form-group col-md-3">
                                 <input type="submit" id="btnUpdate" class="btn btn-success" name="btnUpdate" value="Update" />
