--- a/HMGreenCityMLM/Views/User/ConfirmRegistration.cshtml
+++ b/HMGreenCityMLM/Views/User/ConfirmRegistration.cshtml
@@ -106,7 +106,8 @@
             </div>
             <h2 class="big-green">Congratulations !!</h2>
             <div class="clearfix text-center">
-                <h3>Now you are HM Green City Business Associate</h3>
+                <h3>Now you are HM Group of Company Business Partner</h3>
+               
 
                 <div class="account-info clearfix">
                     <div class="clearfix text-left">
