--- a/HMGreenCityMLM/Views/KYCDocuments/KYCDocuments.cshtml
+++ b/HMGreenCityMLM/Views/KYCDocuments/KYCDocuments.cshtml
@@ -40,16 +40,20 @@
                                        <label>Adhar Number <span style="color:red">*</span></label>
                                        @Html.TextBoxFor(m => m.AdharNumber, new { @class = "form-control", @required = "required" })
                                        @Html.DisplayFor(m => m.AdharStatus, new { @class = "form-control" })
+                                       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                       @Html.DisplayFor(m => m.AdharStatus, new { @class = "form-control" })
                                        @Html.ValidationMessageFor(m => m.AdharNumber)
                                    </div>
                                    <div class="form-group col-md-6">
-                                       <label>Adhar Front Side Image <span style="color:red">*</span></label>
+                                       <label>Adhar Front Image <span style="color:red">*</span></label>
                                        <input type="file" name="postedFile" required="required" />
                                        <br />
                                        <img src="@Url.Content(Model.AdharImage)" height="120" width="180" />
                                    </div>
                                    <div class="form-group col-md-6">
-                                       <label>Adhar Back Side Image <span style="color:red">*</span></label>
+                                       <label>Adhar Back Image <span style="color:red">*</span></label>
                                        <input type="file" name="postedFile" required="required" />
                                        <br />
                                        <img src="@Url.Content(Model.AdharBacksideImage)" height="120" width="180" />
@@ -80,6 +84,22 @@
                                     </div>
                                 </div>
                             </div>
+                            <div class="form-group col-md-3 col-lg-3">
+                                <label>Bank Name <span style="color:red">*</span></label>
+                                @Html.TextBoxFor(m => m.BankName, new { @class = "form-control", @required = "required" })
+                            </div>
+                            <div class="form-group col-md-3 col-lg-3">
+                                <label>Bank Branch <span style="color:red">*</span></label>
+                                @Html.TextBoxFor(m => m.BankBranch, new { @class = "form-control", @required = "required" })
+                            </div>
+                            <div class="form-group col-md-3 col-lg-3">
+                                <label>IFSCCode <span style="color:red">*</span></label>
+                                @Html.TextBoxFor(m => m.IFSCCode, new { @class = "form-control", @required = "required" })
+                            </div>
+                            <div class="form-group col-md-3 col-lg-3">
+                                <label>Account Holder Name <span style="color:red">*</span></label>
+                                @Html.TextBoxFor(m => m.AccountHolderName, new { @class = "form-control", @required = "required" , @onkeypress = "return onlyAlphabets();" })
+                            </div>
                             <div class="form-group col-md-3">
                                 <input type="submit" id="btnUpdate" class="btn btn-success" name="btnUpdate" value="Update" />
                             </div>
@@ -93,3 +113,27 @@
     
 }
 
+
+
+<script>
+    
+    function onlyAlphabets(e, t) {
+        try {
+            if (window.event) {
+                var charCode = window.event.keyCode;
+            }
+            else if (e) {
+                var charCode = e.which;
+            }
+            else { return true; }
+            if ((charCode > 64 && charCode < 91) || (charCode > 96 && charCode < 123) || (charCode == 32))
+                return true;
+            else
+                return false;
+        }
+        catch (err) {
+            alert(err.Description);
+        }
+    }
+
+</script>
