--- a/HMGreenCityMLM/Views/Admin/AssociateListForKYC.cshtml
+++ b/HMGreenCityMLM/Views/Admin/AssociateListForKYC.cshtml
@@ -39,15 +39,13 @@
                                             @Html.TextBoxFor(m => m.LoginId, new { @class = "form-control", @placeholder = "LoginID" })
                                         </div>
                                         <div class="form-group col-md-3">
+                                            <input type="hidden" id="hdf" value="@Model.Status">
                                             <label>Status<span style="color:red"></span></label>
                                             <select class="form-control" id="Status" name="Status">
                                                 <option value="Pending">Pending</option>
                                                 <option value="Approved">Approved</option>
-                                                @*<option value="Rejected">Rejected</option>*@
-
                                             </select>
                                         </div>
-
 
                                         <div class="form-group col-md-3">
                                             <label>From Date</label>
@@ -146,8 +144,12 @@
 <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
 <link rel="stylesheet" type="text/css" href="https://code.jquery.com/ui/1.12.0/themes/smoothness/jquery-ui.css">
 
+
 <script>
-  
+
+    $(document).ready(function () {
+        $("#Status").val($("#hdf").val()).attr("selected", "selected");
+    });
 
     $('#FromDate').datepicker({
         dateFormat: 'dd/mm/yy',
