--- a/HMGreenCityMLM/Views/Shared/_AdminLayout.cshtml
+++ b/HMGreenCityMLM/Views/Shared/_AdminLayout.cshtml
@@ -79,7 +79,7 @@
                         </div>
                         <div class="sidebar-user-details">
                             <div class="user-name">HM GROUP OF COMPANY</div>
-                            <div class="user-role"><a href="#!" class="text-white">Admin</a></div>
+                            <div class="user-role"><a href="#!" class="text-white">@Session["Name"]</a></div>  
                         </div>
                     </div>
                     @{
