--- a/HMGreenCityMLM/Views/Admin/PaidPayout.cshtml
+++ b/HMGreenCityMLM/Views/Admin/PaidPayout.cshtml
@@ -49,6 +49,11 @@
                             <label>Transaction To Date</label>
                             @Html.TextBoxFor(m => m.TToDate, new { @class = "form-control", @readonly = "readonly" })
                         </div>
+
+                        <div class="form-group col-md-3">
+                            <label>Bank Name</label>
+                            @Html.TextBoxFor(m => m.BankName, new { @class = "form-control" })
+                        </div>
                         <div class="form-group col-md-3">
                             <input type="submit" name="GetDetails" class="btn btn-info" value="Get Details" />
                         </div>
