--- a/HMGreenCityMLM/Views/AdminProfile/AssociateListByNew.cshtml
+++ b/HMGreenCityMLM/Views/AdminProfile/AssociateListByNew.cshtml
@@ -57,12 +57,10 @@
                             <label>Status</label>
                             @Html.DropDownListFor(m => m.Status, new SelectList(ViewBag.ddlstatus, "Value", "Text"), new { @class = "form-control" })
                         </div>
-
-
-                        @*<div class="form-group col-md-3">
+                        <div class="form-group col-md-3">
                             <label>Adhar Number</label>
                             @Html.TextBoxFor(m => m.AdharNo, new { @class = "form-control"})
-                        </div>*@
+                        </div>
 
                         <div class="form-group col-md-3">
                             <input type="submit" id="btnSearch" class="btn btn-success pull-left" name="Search" value="Search" onclick="return validateLogin();" />
@@ -84,6 +82,9 @@
                                     <th>Mobile No</th>
                                     <th>Email Id</th>
                                     <th>Status</th>
+                                    <th style="min-width:112px">Green Date</th>
+                                    <th style="min-width:112px">Yellow Date</th>
+                                    <th style="min-width:80px">Print</th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -105,7 +106,13 @@
                                                 <td>@Item.Mobile</td>
                                                 <td>@Item.Email</td>
                                                 <td>@Item.Status</td>
-
+                                                <td style="background-color:#D3F7C4">@Item.GreenDate</td>
+                                                <td style="background-color:#fffec8">@Item.YellowDate</td>
+                                                <td>
+                                                    <a href="/AdminProfile/WelcomeLetter?LoginID=@Item.LoginId" class="btn btn-info btn-sm">
+                                                        Print
+                                                    </a>
+                                                </td>
                                             </tr>
                                             i++;
                                         }
